--- a/WebAppWeather/wwwroot/index.html
+++ b/WebAppWeather/wwwroot/index.html
@@ -1,11 +1,37 @@
 <!DOCTYPE html>
 <html lang="ru">
-    @@include('html/head.html', {
-        "title":"Weather"
-        })
+    <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
+    <script src="https://kit.fontawesome.com/b8991598b2.js"></script>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="../css/style.css">
+    <title>Weather</title>
+</head>
+
 <body>
     <div class="wrapper">
-        @@include('html/header.html', {})
+        <header class="header">
+    <div class="container">
+        <div class="header-row">
+            <a href="#" class="header-logo">
+                <img src="../img/cloudy.png" alt="Логотип" width="55" height="55">
+                <span class="logo-text">Weather Forecast</span>
+            </a>
+
+            <div class="search-box">
+                <input type="text" class="search-txt" placeholder="Поиск города">
+                <a href="#" class="search-button">
+                    <i class="fas fa-search"></i>
+                </a>
+            </div>
+        </div>
+    </div>
+</header>
         <main class="main">
             <div class="container">
                 <div class="content-group">
@@ -51,7 +77,11 @@
             
             </div>
         </main>
-        @@include('html/footer.html', {})
+        <footer class="footer">
+    <div class="container">
+        
+    </div>
+</footer>
     </div>
     <script src="js/app.min.js"></script>
 </body>
