подключен api к frontent

--- a/WebAppWeather/static/src/index.html
+++ b/WebAppWeather/static/src/index.html
@@ -10,42 +10,7 @@
             <div class="container">
                 <div class="content-group">
                     <h2 class="group-title title">Основные города России</h2>
-                    <div class="group-cards">
-                        <div class="card city-card">
-                            <img src="../img/sun.png" alt="Иконка погоды" class="weather-icon">
-                            <span class="temperature">+20°</span>
-                            <span class="type-weather additionally">Облачно</span>
-                            <h3 class="name-city">Москва</h3>
-
-                            <div class="content-bx">
-                                <span class="precipitation additionally">Нет осадков</span>
-                                <span class="pressure additionally">765мм р.с.</span>
-                            </div>
-                        </div>
-                        <div class="card city-card">
-                            <img src="../img/sun.png" alt="Иконка погоды" class="weather-icon">
-                            <span class="temperature">+20°</span>
-                            <span class="type-weather additionally">Облачно</span>
-                            <h3 class="name-city">Санкт-Петербург</h3>
-                        </div>
-                        <div class="card city-card">
-                            <img src="../img/sun.png" alt="Иконка погоды" class="weather-icon">
-                            <span class="temperature">+20°</span>
-                            <span class="type-weather additionally">Облачно</span>
-                            <h3 class="name-city">Екатеринбург</h3> 
-                        </div>
-                        <div class="card city-card">
-                            <img src="../img/sun.png" alt="Иконка погоды" class="weather-icon">
-                            <span class="temperature">+20°</span>
-                            <span class="type-weather additionally">Облачно</span>
-                            <h3 class="name-city">Новосибирск</h3>
-                        </div>
-                        <div class="card city-card">
-                            <img src="../img/sun.png" alt="Иконка погоды" class="weather-icon">
-                            <span class="temperature">+20°</span>
-                            <span class="type-weather additionally">Облачно</span>
-                            <h3 class="name-city">Владивосток</h3>
-                        </div>
+                    <div id="cards-container" class="group-cards">
                     </div>
                 </div>
             
