Добавлена страница погоды

--- a/WebAppWeather/wwwroot/weather.html
+++ b/WebAppWeather/wwwroot/weather.html
@@ -32,14 +32,34 @@
         </div>
     </div>
 </header>
-        <main class="main">
+        <main class="weather-main">
             <div class="container">
-                <div class="content-group">
-                    <h2 class="group-title title">Основные города России</h2>
-                    <div id="cards-container" class="group-cards">
+                <div class="row">
+                    <div class="content-group this">
+                        <div class="weather-box">
+                            <div class="weather-box-row">
+                                <div class="weather-box-column">
+                                    <span class="temperature">20°</span>
+                                    <span class="date">Сегодня</span>
+                                </div>
+                                <img class="weather-icon big-icon" src="./img/weather-icon/01d.svg"></img>
+                            </div>
+                            <div class="weather-box-row additionally weather-addition">
+                                <div class="time-string">
+                                    <span class="time-text">Время:</span>
+                                    <span class="time">21:54</span>
+                                </div>
+                                <div class="city-string">
+                                    <span class="city-text">Город:</span>
+                                    <span class="city">Санкт-Петербург</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="content-group this-info">
+                        
                     </div>
                 </div>
-            
             </div>
         </main>
         <footer class="footer">
