--- a/WebAppWeather/static/src/weather.html
+++ b/WebAppWeather/static/src/weather.html
@@ -26,12 +26,32 @@
                                 <div class="city-string">
                                     <span class="city-text">Город:</span>
                                     <span class="city">Санкт-Петербург</span>
+                                    <img src="./img/cloud-bg.png" alt="Задний фон облака">
                                 </div>
                             </div>
                         </div>
                     </div>
                     <div class="content-group this-info">
-                        
+                        <ul class="list-info">
+                            <div class="item-info">
+                                <div class="icon-info"><img src="./img/info-icon/thermometer.svg" alt="термометер"></div>
+                                <span class="title-text">Температура</span>
+                                <span class="value-info">20° - ощущается как 17°</span>
+                            </div>
+                            <div class="item-info">
+                                <img src="./img/info-icon/humidity.svg" alt="капля">
+                                <span class="title-text">Давление</span>
+                            </div>
+                            <div class="item-info">
+                                <img src="./img/info-icon/evaporator.svg" alt="осадки">
+                                <span class="title-text">Осадки</span>
+                            </div>
+                            <div class="item-info">
+                                <img src="./img/info-icon/wind.svg" alt="ветер">
+                                <span class="title-text">Ветер</span>
+                            </div>
+                        </ul>
+                        <div class="value-block"></div>
                     </div>
                 </div>
             </div>
