Добавлены модели представления

--- a/WebAppWeather/static/src/html/header.html
+++ b/WebAppWeather/static/src/html/header.html
@@ -1,7 +1,7 @@
 <header class="header">
     <div class="container">
         <div class="header-row">
-            <a data-url="weather" class="header-logo to-weather nav-link">
+            <a data-url="home" class="header-logo to-weather nav-link">
                 <img src="../img/cloudy.png" alt="Логотип" width="55" height="55">
                 <span class="logo-text">Weather Forecast</span>
             </a>
