Добавлен поисковик городов

--- a/WebAppWeather/wwwroot/weather.html
+++ b/WebAppWeather/wwwroot/weather.html
@@ -25,10 +25,12 @@
             </a>
 
             <div class="search-box">
-                <input type="text" class="search-txt" placeholder="Поиск города">
+                <input type="text" class="search-txt search" placeholder="Поиск города">
                 <a href="#" class="search-button">
                     <i class="fas fa-search"></i>
                 </a>
+                <div class="values-box">
+                </div>
             </div>
         </div>
     </div>
