--- a/WebAppWeather/wwwroot/index.html
+++ b/WebAppWeather/wwwroot/index.html
@@ -25,12 +25,17 @@
                 <span class="logo-text">Weather Forecast</span>
             </a>
 
-            <div class="search-box">
-                <input type="text" class="search-txt search" placeholder="Поиск города">
-                <a href="#" class="search-button">
-                    <i class="fas fa-search"></i>
-                </a>
-                <div class="values-box">
+            <div class="rigth-box">
+                <button id="theme" class="theme-button">
+                    <img src="../img/theme.svg" alt="кнопка темы">
+                </button>
+                <div class="search-box">
+                    <input type="text" class="search-txt search" placeholder="Поиск города">
+                    <a href="#" class="search-button">
+                        <i class="fas fa-search"></i>
+                    </a>
+                    <div class="values-box">
+                    </div>
                 </div>
             </div>
         </div>
@@ -58,6 +63,7 @@
         </div>
         <!-- /#preloader.preloader -->
     </div>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="js/app.min.js"></script>
 </body>
 
