--- a/WebAppWeather/static/src/html/header.html
+++ b/WebAppWeather/static/src/html/header.html
@@ -6,12 +6,17 @@
                 <span class="logo-text">Weather Forecast</span>
             </a>
 
-            <div class="search-box">
-                <input type="text" class="search-txt search" placeholder="Поиск города">
-                <a href="#" class="search-button">
-                    <i class="fas fa-search"></i>
-                </a>
-                <div class="values-box">
+            <div class="rigth-box">
+                <button id="theme" class="theme-button">
+                    <img src="../img/theme.svg" alt="кнопка темы">
+                </button>
+                <div class="search-box">
+                    <input type="text" class="search-txt search" placeholder="Поиск города">
+                    <a href="#" class="search-button">
+                        <i class="fas fa-search"></i>
+                    </a>
+                    <div class="values-box">
+                    </div>
                 </div>
             </div>
         </div>
