--- a/WebAppWeather/static/src/index.html
+++ b/WebAppWeather/static/src/index.html
@@ -25,6 +25,7 @@
         </div>
         <!-- /#preloader.preloader -->
     </div>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="js/app.min.js"></script>
 </body>
 
